AC-1083 - fill out module descriptors correctly